--- a/src/app/modules/control/roleapppermission/RoleAppPermissiondashboard/RoleAppPermissiondashboard.component.html
+++ b/src/app/modules/control/roleapppermission/RoleAppPermissiondashboard/RoleAppPermissiondashboard.component.html
@@ -6,7 +6,7 @@
     <alert></alert>
     <form [formGroup]="searchForm">
         <!-- <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="30px"> -->
-            <mat-form-field appearance="outline" [style.width.px]="200">
+            <!-- <mat-form-field appearance="outline" [style.width.px]="200">
                 <mat-label>Application</mat-label>
                 <mat-select formControlName="searchApplicationId" (selectionChange)="enable($event)">
                     <mat-option [value]="0">select</mat-option>
@@ -14,7 +14,7 @@
                         {{feature.Description}}
                     </mat-option>
                 </mat-select>
-            </mat-form-field>
+            </mat-form-field> -->
             <mat-form-field appearance="outline" [style.width.px]="200">
                 <mat-label>Top Feature</mat-label>
                 <mat-select formControlName="PlanFeatureId" (selectionChange)="enable($event)">
