--- a/src/app/modules/student/studentprimaryinfo/studentprimaryinfo.component.scss
+++ b/src/app/modules/student/studentprimaryinfo/studentprimaryinfo.component.scss
@@ -1,5 +1,7 @@
 mat-form-field{
-    margin-right: 20px;
+    margin-right: 15px;
+    width: 98%;
+    max-width: 300px;
 }
 mat-radio-button{
     margin-right: 10px;
