--- a/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebar/sidebar.component.scss
@@ -10,3 +10,6 @@
     width:100%;
     float: left;
 }
+.active-list-item {
+    color: #3F51B5 !important; /* Note: You could also use a custom theme */
+  }
