--- a/src/app/modules/employeedetail/educationhistory/educationhistory.component.html
+++ b/src/app/modules/employeedetail/educationhistory/educationhistory.component.html
@@ -76,7 +76,7 @@
                 </ng-container>
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef>
-                        <button [disabled]="loading || Permission=='read'" matTooltip="add new" mat-mini-fab (click)="AddNew()">
+                        <button [disabled]="loading || Permission=='read' || EmployeeId==0" matTooltip="add new" mat-mini-fab (click)="AddNew()">
                             <mat-icon>add</mat-icon>
                         </button>
                     </mat-header-cell>
