--- a/src/app/modules/employeedetail/family/family.component.scss
+++ b/src/app/modules/employeedetail/family/family.component.scss
@@ -1,4 +1,8 @@
+mat-form-field{
+    width: 98%;
+}
 .mat-column-Active{
+    flex:0 0 100px;
     justify-content: center;
 }
 .mat-column-EmployeeFamilyId{
