--- a/src/app/modules/employeedetail/family/family.component.html
+++ b/src/app/modules/employeedetail/family/family.component.html
@@ -20,7 +20,7 @@
                     <mat-header-cell *matHeaderCellDef>Full Name
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="200">
+                        <mat-form-field appearance="outline">
                             <input matInput (blur)="onBlur(element)" autocomplete="Off" [maxlength]="250"
                                 [value]="element.FullName" [(ngModel)]="element.FullName">
                         </mat-form-field>
@@ -30,7 +30,7 @@
                     <mat-header-cell *matHeaderCellDef>Gender
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="150">
+                        <mat-form-field appearance="outline">
                             <mat-select (selectionChange)="onBlur(element)" [value]="element.Gender"
                                 [(ngModel)]="element.Gender">
                                 <mat-option *ngFor="let item of Genders" [value]="item.MasterDataId">
@@ -43,7 +43,7 @@
                     <mat-header-cell *matHeaderCellDef>Family Relationship
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="150">
+                        <mat-form-field appearance="outline">
                             <mat-select (selectionChange)="onBlur(element)" [value]="element.FamilyRelationShipId"
                                 [(ngModel)]="element.FamilyRelationShipId">
                                 <mat-option *ngFor="let item of FamilyRelationship" [value]="item.MasterDataId">
@@ -56,7 +56,7 @@
                     <mat-header-cell *matHeaderCellDef>Age
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="150">
+                        <mat-form-field appearance="outline">
                             <input type="number" matInput (blur)="onBlur(element)" autocomplete="Off" [max]="80"
                                 [value]="element.Age" [(ngModel)]="element.Age">
                         </mat-form-field>
@@ -74,7 +74,7 @@
                 </ng-container>
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef>
-                        <button [disabled]="loading || Permission=='read'" matTooltip="add new" mat-mini-fab (click)="AddNew()">
+                        <button [disabled]="loading || Permission=='read' || EmployeeId==0" matTooltip="add new" mat-mini-fab (click)="AddNew()">
                             <mat-icon>add</mat-icon>
                         </button>
                     </mat-header-cell>
